@@ -164,10 +164,14 @@ IP addresses to the topology map. The default is 10 seconds.
 
 ===== topology_expire
 
-The expiration time for the topology in seconds. This is
-useful in case a Beat stops publishing its IP addresses. The IP addresses
-are removed automatically from the topology map after expiration. The default
-is 15 seconds.
+The expiration time for the topology in seconds. This is useful in case a Beat
+stops publishing its IP addresses. The IP addresses are removed automatically
+from the topology map after expiration.
+
+This setting is used only by the Redis output. The other outputs don't support
+expiring entries.
+
+The default is 15 seconds.
 
 ===== queue_size
 
