@@ -2,7 +2,6 @@ package elasticsearch
 
 import (
 	"encoding/json"
-	"fmt"
 	"math/rand"
 	"strconv"
 	"strings"
@@ -15,9 +14,7 @@ import (
 type topology struct {
 	clients []mode.ProtocolClient
 
-	TopologyExpire int
-	TopologyMap    atomic.Value // Value holds a map[string][string]
-	ttlEnabled     bool
+	TopologyMap atomic.Value // Value holds a map[string][string]
 }
 
 type publishedTopology struct {
@@ -36,34 +33,6 @@ func (t *topology) randomClient() *Client {
 	}
 }
 
-// Enable using ttl as paramters in a server-ip doc type
-func (t *topology) EnableTTL() error {
-	client := t.randomClient()
-	if client == nil {
-		return ErrNotConnected
-	}
-
-	setting := map[string]interface{}{
-		"server-ip": map[string]interface{}{
-			"_ttl": map[string]string{"enabled": "true", "default": "15s"},
-		},
-	}
-
-	// make sure the .packetbeat-topology index exists
-	// Ignore error here, as CreateIndex will error (400 Bad Request) if index
-	// already exists. If index could not be created, next api call to index will
-	// fail anyway.
-	index := ".packetbeat-topology"
-	_, _, _ = client.CreateIndex(index, nil)
-	_, _, err := client.Index(index, "server-ip", "_mapping", nil, setting)
-	if err != nil {
-		return err
-	}
-
-	t.ttlEnabled = true
-	return nil
-}
-
 // Get the name of a shipper by its IP address from the local topology map
 func (t *topology) GetNameByIP(ip string) string {
 	topologyMap, ok := t.TopologyMap.Load().(map[string]string)
@@ -78,20 +47,14 @@ func (t *topology) GetNameByIP(ip string) string {
 
 // Each shipper publishes a list of IPs together with its name to Elasticsearch
 func (t *topology) PublishIPs(name string, localAddrs []string) error {
-	if !t.ttlEnabled {
-		debugf("Not publishing IPs because TTL was not yet confirmed to be enabled")
-		return nil
-	}
-
 	client := t.randomClient()
 	if client == nil {
 		return ErrNotConnected
 	}
 
-	debugf("Publish IPs %s with expiration time %d", localAddrs, t.TopologyExpire)
+	debugf("Publish IPs: %s", localAddrs)
 
 	params := map[string]string{
-		"ttl":     fmt.Sprintf("%dms", t.TopologyExpire),
 		"refresh": "true",
 	}
 	_, _, err := client.Index(
